Bug 1866595 - Disable VOICE input on MacOS 12. r=cubeb-reviewers,chunmin

This works around some platform bugs related to the VoiceProcessingIO audio
unit on MacOS 12.

Differential Revision: https://phabricator.services.mozilla.com/D197659